adding github actions oidc and digger template

--- a/.digger.yaml
+++ b/.digger.yaml
@@ -1,7 +1,3 @@
-tests:
-  - name: terraform-format
-    type: command
-    command: terraform fmt -check ./organization
-  - name: terraform-validate
-    type: command
-    command: terraform validate ./organization
+projects:
+  - name: organization
+    dir: organization
