adding github actions oidc and digger template

--- a/.github/workflows/digger.yaml
+++ b/.github/workflows/digger.yaml
@@ -9,6 +9,10 @@ on:
   workflow_dispatch:
 
 jobs:
+  permissions:
+    contents: write
+    issues: read
+    pull-requests: write
   build:
     runs-on: ubuntu-latest
     permissions:
