--- a/.github/workflows/digger.yaml
+++ b/.github/workflows/digger.yaml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Debug GitHub Context
+        run: echo '${{ toJson(github) }}'
       - name: digger run
         uses: diggerhq/digger@v0.4.21
         with:
