--- a/.github/workflows/digger.yaml
+++ b/.github/workflows/digger.yaml
@@ -20,8 +20,6 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Debug GitHub Context
-        run: echo '${{ toJson(github) }}'
       - name: digger run
         uses: diggerhq/digger@v0.4.21
         with:
@@ -30,3 +28,4 @@ jobs:
           aws-region: us-east-1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_CONTEXT: `${{ toJson(github) }}`
