--- a/.github/workflows/digger.yaml
+++ b/.github/workflows/digger.yaml
@@ -21,11 +21,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: digger run
-        uses: diggerhq/digger@v0.4.21
+        uses: diggerhq/digger@v0.4.13
         with:
           setup-aws: true
           aws-role-to-assume: arn:aws:iam::176207359176:role/github-actions-GitHubActionsServiceRole-BwQR0UB8GquE
           aws-region: us-east-1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_CONTEXT: `${{ toJson(github) }}`
+          GITHUB_CONTEXT: ${{ toJson(github) }}
