--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -27,6 +27,9 @@ jobs:
         with:
           terraform_version: 1.3.0
 
+      - name: Change Directory
+        run: cd organization
+
       - name: Initialize Terraform
         run: terraform init
 
