--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -28,6 +28,7 @@ jobs:
           terraform_version: 1.3.0
 
       - name: Initialize Terraform
+        working-directory: organization
         run: terraform init
 
       - name: Run Terraform Plan
